Bug 989676: Remove redundant 'const' qualifier applied to already-'const' typedefs in nsCookieService.h. r=hurley